<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome_to_quiz_app">Welcome to Quiz App</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="tap_to_begin">Tap to begin</string>
    <string name="finish">Finish</string>
    <string name="your_score_is">Your score is %1$d out of %2$d</string>
    <string name="congratulations">Congratulations!</string>
</resources>